--- a/index.css
+++ b/index.css
@@ -30,3 +30,10 @@ hr {
 h2 {
 	color: #c0392b
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
