--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-ion-toolbar {
-    --background: #c0392b;
-    --color: white;
-}
-
 ion-content {
     --background: #e5e5e5;
 }
@@ -18,6 +13,7 @@ ion-card {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    background-color: white;
 }
 
 ion-button {
@@ -57,6 +53,7 @@ h2 {
 }
 
 :root {
+    --ion-background-color: #e5e5e5;
 	--ion-color-primary: #c0392b;
 	--ion-color-primary-rgb: 192,57,43;
 	--ion-color-primary-contrast: #ffffff;
@@ -152,5 +149,9 @@ h2 {
         --ion-item-background: #000000;
     
         --ion-card-background: #1c1c1d;
-      }
+    }
+
+    ion-card {
+        background-color: #1c1c1d;
+    }
 }
